// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardMenu Should renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ dXOdEP"
    data-testid="card-menu"
  >
    <div
      class="sc-gsTCUz ePyKZa"
    />
    <div
      class="sc-gsTCUz ePyKZa"
    />
    <div
      class="sc-gsTCUz ePyKZa"
    />
  </div>
</DocumentFragment>
`;

exports[`CardMenu Should renders correctly with opened dropdown 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ dXOdEP"
    data-testid="card-menu"
  >
    <div
      class="sc-gsTCUz ePyKZa"
    />
    <div
      class="sc-gsTCUz ePyKZa"
    />
    <div
      class="sc-gsTCUz ePyKZa"
    />
  </div>
  <div
    class="sc-dlfnbm diuKjh"
  >
    <div
      class="sc-eCssSg lbKJNB"
    >
      ×
    </div>
    <div
      class="sc-hKgILt hKpXyD"
    >
      Edit
    </div>
    <div
      class="sc-hKgILt hKpXyD"
    >
      Delete
    </div>
  </div>
</DocumentFragment>
`;
